--- a/src/app/shared/components/booking-table/booking-table.component.html
+++ b/src/app/shared/components/booking-table/booking-table.component.html
@@ -1,8 +1,12 @@
+<div [ngClass]="{'overlay': isPopupVisible}" (click)="togglePopup()"></div>
+
 <ng-container *ngIf="unpaidUserBookings$ | async as unpaidUserBookings">
 
-  <div class="header-container">
+  <div class="header-container" *ngIf="unpaidUserBookings.length">
 
-    <mat-checkbox color="primary" [checked]="isAllChecked" (click)="isAllBookingsSelected(unpaidUserBookings)"></mat-checkbox>
+    <mat-checkbox color="primary" [checked]="isAllChecked"
+      (click)="isAllBookingsSelected(unpaidUserBookings)">
+    </mat-checkbox>
 
     <div class="header-content-container">
       <p class="number-container">No.</p>
@@ -15,22 +19,28 @@
 
   </div>
 
-  <p *ngIf="!unpaidUserBookings.length">No bookings. Please add new trip</p>
+  <p class="no-bookings-text"
+    *ngIf="!unpaidUserBookings.length">
+    No bookings to pay. Please add new trip
+  </p>
   <div class="bookings-container">
-    <app-booking-item *ngFor="let booking of unpaidUserBookings" [booking]="booking" class="bottom-line"></app-booking-item>
+    <app-booking-item *ngFor="let booking of unpaidUserBookings"
+      [booking]="booking" class="bottom-line">
+    </app-booking-item>
   </div>
 
-  <div class="bottom-container bottom-line">
-    <button class="without-padding" (click)="navToMain()">
-      <span class="add-btn-text">+ Add new trip</span>
-    </button>
-    <div class="total-container">
-      <p class="total-title">Total</p>
-      <p class="total-cost">{{summary(unpaidUserBookings) | currency: 'EUR'}}</p>
-    </div>
+  <div class="bottom-container bottom-line"
+    [ngClass]="{'position-center': !unpaidUserBookings.length}">
+      <button class="without-padding" (click)="navToMain()">
+        <span class="add-btn-text">+ Add new trip</span>
+      </button>
+      <div class="total-container" *ngIf="unpaidUserBookings.length">
+        <p class="total-title">Total</p>
+        <p class="total-cost">{{summary(unpaidUserBookings) | currency: 'EUR'}}</p>
+      </div>
   </div>
 
-  <div class="apply-container">
+  <div class="apply-container" *ngIf="unpaidUserBookings.length">
     <form class="promo-container">
       <input type="text" class="promo" placeholder="Promo Code">
       <button class="promo-apply without-padding">APPLY</button>
@@ -44,11 +54,25 @@
       <ng-template #noSelect>
         <p class="select-content">No booking selected</p>
       </ng-template>
-      <button class="primary-btn">Payment</button>
+      <button class="primary-btn"
+        (click)="payBookings()"
+        [disabled]="!selectedCount">
+        Payment
+      </button>
     </div>
   </div>
 
 </ng-container>
+
+<mat-card class="popup" [ngClass]="{'visible': isPopupVisible}">
+  <p class="approve-text">All bookings you have chosen have been paid</p>
+  <button class="secondary-btn pisioned-right"
+    (click)="togglePopup()">
+    Close
+  </button>
+</mat-card>
+
+
 
 
 
