--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -23,29 +23,23 @@
           <span class="description">Additional baggage</span>
         </p>
 
-        <mat-form-field class="baggage-input">
+        <div class="counter">
           <button
-            mat-button
-            mat-icon-button
-            matPrefix
-            aria-label="Remove"
+            class="counter-btn"
             (click)="decrement()"
             [disabled]="shouldDisableDecrement()"
           >
             <mat-icon>remove</mat-icon>
           </button>
-          <input matInput type="number" formControlName="luggage" readonly/>
+          <input class="number-input" matInput type="number" formControlName="luggage" readonly/>
           <button
-            mat-button
-            mat-icon-button
-            matSuffix
-            aria-label="Add"
-            (click)="increment() "
+            class="counter-btn"
+            (click)="increment()"
             [disabled]="shouldDisableIncrement()"
           >
             <mat-icon>add</mat-icon>
           </button>
-        </mat-form-field>
+        </div>
       </div>
 
       <p class="error-baggage" [ngClass]="{'invisible': !isLuggageError}">
