fix: comment out slider

--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -45,6 +45,9 @@ p {
 
 .active {
   box-shadow: var(--box-shadow);
+  padding-top: 1rem;
+  border-bottom: .4rem solid red;
+
   & .date {
     font-size: 2rem;
     color: var(--primary-color);
