feat: initial account page

--- a/src/app/account/pages/account-page/account-page.component.html
+++ b/src/app/account/pages/account-page/account-page.component.html
@@ -1,1 +1,5 @@
+<mat-card class="cart-container">
+  <p class="title account-title">Account</p>
+</mat-card>
+
 <button class="primary-btn" (click)="logout()">Logout</button>
