--- a/src/app/account/pages/account-page/account-page.component.html
+++ b/src/app/account/pages/account-page/account-page.component.html
@@ -3,7 +3,9 @@
   <mat-card class="cart-container">
     <p class="title account-title">Account</p>
     <app-booking-table [userBookings$]="allUserBookings$"></app-booking-table>
-    <button class="btn primary-btn logout-btn" (click)="logout()">Logout</button>
+    <div class="btn-container">
+      <button class="btn primary-btn" (click)="logout()">Logout</button>
+    </div>
   </mat-card>
 
 </div>
