--- a/src/app/shared/components/booking-table/booking-table.component.html
+++ b/src/app/shared/components/booking-table/booking-table.component.html
@@ -2,7 +2,9 @@
 
   <div class="header-container" *ngIf="userBookings.length">
 
-    <mat-checkbox color="primary" [checked]="isAllChecked"
+    <mat-checkbox color="primary"
+      *ngIf="isCartPage"
+      [checked]="isAllChecked"
       (click)="isAllBookingsSelected(userBookings)">
     </mat-checkbox>
 
@@ -10,10 +12,12 @@
       <p class="number-container">No.</p>
       <p class="flight-number-container">Flight</p>
       <p class="way">Type trip</p>
-      <p class="time-cintainer">Data & Time</p>
+      <p class="time-container">Data & Time</p>
       <p class="passengers-container">Passengers</p>
-      <p>Price</p>
+      <p class="cost">Price</p>
     </div>
+
+    <mat-icon class="hidden" [style]="isCartPage ? '' : 'display: none'">more_vert</mat-icon>
 
   </div>
 
