--- a/src/app/shared/components/booking-table/booking-item/booking-item.component.scss
+++ b/src/app/shared/components/booking-table/booking-item/booking-item.component.scss
@@ -9,12 +9,22 @@ p {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--neutral-color);
+
+  @media screen and (max-width:600px) {
+      gap: 1.5rem;
+  }
+
+  @media screen and (max-width:450px) {
+    gap: 1rem;
+  }
+
 }
 
 .booking-container {
   max-width: 100%;
   flex-grow: 1;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
@@ -24,28 +34,49 @@ p {
 
 .number-container {
   max-width: 10rem;
+  min-width: max-content;
   flex-grow: 1;
   font-weight: 700;
   color: var(--secondary-color);
 }
 
-.flight-number-container {
+.flight-name-container {
   max-width: 28rem;
+  min-width: 14rem;
   flex-grow: 1;
 }
 
 .way {
   max-width: 10rem;
+  min-width: max-content;
   flex-grow: 1;
 }
 
 .time-container {
-  max-width: 25rem;
+  max-width: 29rem;
+  min-width: 15rem;
   flex-grow: 1;
+}
+
+.departure-time-container {
+  display: flex;
+  gap: 0.5rem;
+
+  @media screen and (max-width:600px) {
+    flex-direction: column;
+    gap: 0;
+
+  }
+}
+
+.departure-date,
+.departure-time {
+  min-width: max-content;
 }
 
 .passengers-container {
   max-width: 11rem;
+  min-width: max-content;
   flex-grow: 1;
 }
 
