--- a/src/app/shared/components/booking-table/booking-table.component.html
+++ b/src/app/shared/components/booking-table/booking-table.component.html
@@ -10,7 +10,7 @@
 
     <div class="header-content-container">
       <p class="number-container">No.</p>
-      <p class="flight-number-container">Flight</p>
+      <p class="flight-name-container">Flight</p>
       <p class="way">Type trip</p>
       <p class="time-container">Data & Time</p>
       <p class="passengers-container">Passengers</p>
@@ -33,7 +33,7 @@
 
   <div class="bottom-container bottom-line"
     [ngClass]="{'position-center': !userBookings.length}">
-      <button class="without-padding" (click)="navToMain()">
+      <button class="add-btn" (click)="navToMain()">
         <span class="add-btn-text">+ Add new trip</span>
       </button>
       <div class="total-container" *ngIf="userBookings.length">
