feat: divide booking table in account cart to paid and unpaid bookings

--- a/src/app/account/pages/account-page/account-page.component.html
+++ b/src/app/account/pages/account-page/account-page.component.html
@@ -2,7 +2,7 @@
 
   <mat-card class="cart-container">
     <p class="title account-title">Account</p>
-    <app-booking-table [userBookings$]="allUserBookings$"></app-booking-table>
+    <app-booking-table [paidUserBookings$]="paidUserBookings$" [unpaidUserBooking$]="unpaidUserBookings$"></app-booking-table>
     <div class="btn-container">
       <button class="btn primary-btn" (click)="logout()">Logout</button>
     </div>
