--- a/src/app/shared/components/booking-table/booking-table.component.scss
+++ b/src/app/shared/components/booking-table/booking-table.component.scss
@@ -85,6 +85,18 @@ p {
 
 }
 
+.paid-title {
+  padding: 2rem 3.5rem 0;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+
+  @media screen and (max-width: 450px) {
+    padding: 2rem 1.5rem 0;
+  }
+
+}
+
 
 .bottom-line {
   border-bottom: 1px solid var(--neutral-color);
@@ -122,6 +134,7 @@ p {
 }
 
 .total-container {
+  margin-left: auto;
   display: flex;
   align-items: center;
   gap: 2.5rem;
