feat: add styles for slider

--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 .date-card {
   cursor: pointer;
   display: flex;
@@ -8,7 +12,6 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  max-width: 22rem;
 }
 
 p {
