--- a/src/app/booking/components/search-results/date-slider/date-slider.component.html
+++ b/src/app/booking/components/search-results/date-slider/date-slider.component.html
@@ -1,5 +1,5 @@
 <section class="date-slider">
   <div class="inner-section">
-    <app-date-item *ngFor="let item of sliderData" [dateItemDto]="item"></app-date-item>
+    <app-date-item *ngFor="let item of sliderData" [dateItemDto]="item" (changeDate)="selectNewDate($event)"></app-date-item>
   </div>
 </section>
