feat: update styles for several flights, update price directive to handle non-nullable values

--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
@@ -31,3 +31,9 @@
   font-size: 1.6rem;
   color: var(--auxiliary-color);
 }
+
+.flights {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
