--- a/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
+++ b/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: space-between;
   color: var(--auxiliary-color);
+  padding: 0 2rem;
 
   @media screen and (max-width: 450px) {
     flex-direction: column;
