--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -1,7 +1,6 @@
 :host {
   width: 100%;
   padding-top: .5rem;
-  transition: all .5s ease;
 }
 
 .date-card {
@@ -14,6 +13,7 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  transition: all .2s ease-in-out;
 }
 
 p {
