--- a/src/app/booking/components/search-results/date-slider/date-slider.component.html
+++ b/src/app/booking/components/search-results/date-slider/date-slider.component.html
@@ -1,11 +1,11 @@
-<section class="date-slider">
+<section class="date-slider" *ngIf="sliderData">
   <button class="slider-arrow-btn btn-prev">
     <img src="/assets/less.svg" alt="prev">
   </button>
-  <div class="inner-section" *ngIf="sliderData | async as items">
-    <app-date-item *ngFor="let item of items, trackBy: trackByFn" [dateItemDto]="item"
+  <div class="inner-section">
+    <app-date-item *ngFor="let item of sliderData, trackBy: trackByFn" [dateItemDto]="item"
                     (changeDate)="selectNewDate($event)" 
-                    appPriceColor [price]="item.price" [pricesForPeriod]="items"
+                    appPriceColor [price]="item.price" [pricesForPeriod]="sliderData"
                     [isActive]="checkIfActiveDate(item)"
                     >
     </app-date-item>
