--- a/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
+++ b/src/app/booking/components/search-results/date-slider/date-item/date-item.component.scss
@@ -1,6 +1,7 @@
 :host {
-  width: 100%;
   padding-top: .5rem;
+  width: calc(100% / 5);
+  flex-shrink: 0;
 }
 
 .date-card {
@@ -49,10 +50,10 @@ p {
 }
 
 .active {
-  box-shadow: var(--box-shadow);
-  padding-top: 1rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   border-bottom: .4rem solid;
-
+  margin: 2px;
+  
   & .date {
     font-size: 2rem;
     color: var(--primary-color);
